Fix spacing errors and add background

--- a/css/main.css
+++ b/css/main.css
@@ -30,16 +30,19 @@ html {
 
 .nav a:hover {
   background-image: url("../images/leaf-icon.svg");
-background-position: ..75em center;
+background-position: .75em center;
 background-size: 3em;
-background-repeat : no-repeat;
+background-repeat: no-repeat;
 border: 3px solid #2d5a4d;
 background-color: #fff;
 color: #145b1d;
 }
 
 .banner {
-
+  background:
+      linear-gradient(to top, rgba(16, 52, 41, .8), rgba(16, 52, 41, 0) 70%),
+      url("../images/banner.jpg") no-repeat center bottom / cover #588477;
+    border-bottom: 3px solid #2d5a4d;
 }
 
 .banner-content {
